--- a/index.html
+++ b/index.html
@@ -1,25 +1,3 @@
-<<<<<<< Updated upstream
-<html>
-    <head>
-        <title> "Jornada Dev( o cabeção)" </title>
-    </head>
-    <body>
-        <h1> esta é a area do corpo</h1>
-        <h2> esta é a area do corpo</h2>
-
-    </body>
-    <ol>
-        <li>café</li>
-        <li>café, sim</li>
-        <li>mais café</li>
-    </ol>
-    <ul>
-        <li>café</li>
-        <li>café, sim</li>
-        <li>mais café</li>
-    </ul>
-</html>
-=======
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -34,7 +12,7 @@
             <section class="left-section">
                 <section class="left-section-content">
                     <div class="profile">
-                        <img class="profile-image" src="img/profile-image.jpg"
+                        <img class="profile-image" src="img/profile-image.jpeg"
                         alt="profile image">
                         <p class="name">Kaike Wilian</p>
                         <p class="profession">front-end student</p>
@@ -47,6 +25,7 @@
                             <li><i class="fa fa-globe"></i>www.kaike.com</li>
                             <li><i class="fa fa-github"></i>Kwillcamp</li>
                         </ul>
+                        <br>
                     </div>
                     <div class="skills">
                         <p class="left-title">skills</p>
@@ -72,4 +51,3 @@
         </main>
     </body>
 </html>
->>>>>>> Stashed changes
