feat-add-job-details

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </section>
                     </div>
                     <section class="experience gap">
-                        <div class="tight-title">experiencia</div>
+                        <div class="right-title">experiencia</div>
                         <div class="experience-contents">
                             <div class="exp-left">
                                 <p class="exp-company-name">Empresa 01</p>
