--- a/index.html
+++ b/index.html
@@ -68,15 +68,55 @@
                         <div class="exp-right">
                         <p class="exp-position">Auxiliar do gerente de setor</p>
                         <p class="exp-desc">
-                            Descreva aqui as principais atividades.
-                        </p>
+                            Descreva aqui as principais atividades.   </p>
 
-                    </div>
                         </div>
-                      
+                            </div>
+                        </section>
+                    <section class="education gap">
+                        <div class="right-title">Formação Academica</div>
+                        <div class="education-contents">
+                        <div class="education-left">
+                            <p class="education-school-name">PUC</p>
+                            <p class="education-time-period">2021~2023</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Engenharia de software</p>
+                            <p class="education-desc">Pós graduação em Engenharia de software</p>
+                        </div>
+                        <div class="education-left">
+                            <p class="education-school-name">USP</p>
+                            <p class="education-time-period">2015~2018</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Engenharia da computação</p>
+                            <p class="education-desc">Graduação em Engenharia de software</p>
+                        </div>
+                        </div>
                     </section>
-                </section>
-
-        </main>
-    </body>
-</html>
+                    <section class="awards gap">
+                        <div class="right-title">Cursos</div>
+                        <div class="awards-contents">
+                            <div class="awards-left">
+                            <p class="awards-company-name">EBAC</p>
+                            <p class="awards-time-period">junho de 2018</p>
+                            </div>
+                            <div class="awards-right">
+                                <p class="awards-name">curso de UX</p>
+                                <p class="awards-desc">Curso feito na EBAC em 2018</p>
+                            </div>
+                                <div class="awards-left">
+                                <p class="awards-company-name">EBAC</p>
+                                <p class="awards-time-period">junho de 2019</p>
+                                </div>
+                                <div class="awards-right">
+                                    <p class="awards-name">curso de Analise de Dados</p>
+                                    <p class="awards-desc">Curso feito na EBAC em 2019</p>
+                                </div>
+                        </div>
+                    </section>
+                    </section>
+    
+            </main>
+        </body>
+    </html>
